--- a/index.ipynb
+++ b/index.ipynb
@@ -284,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None(Non)"
+    "None"
    ]
   },
   {
