Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -412,8 +412,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "name = 'Liz Kaplan'\n",
